--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "safety-app",
+  "name": "safespace",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.15",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.4"
+    "@expo/vector-icons": "^14.1.0",
+    "expo": "~53.0.0",
+    "expo-location": "~18.1.0",
+    "expo-permissions": "~14.4.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "^18.2.0",
+    "react-native": "0.72.10",
+    "react-native-maps": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
