--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "expo": "~53.0.0",
     "expo-location": "~18.1.0",
     "expo-permissions": "~14.4.0",
-    "expo-status-bar": "~1.6.0",
-    "react": "^18.2.0",
-    "react-native": "0.72.10",
-    "react-native-maps": "^1.10.0"
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.4",
+    "react-native-maps": "1.20.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro": "^0.82.0",
+    "metro-resolver": "^0.76.9"
   },
   "private": true
 }
